# gift_circle

./: Cargo.toml  LICENSE  README.md  develop.md
.github/workflows/: rust.yml
data/: example-participants-with-groups.csv
src/: README.md  args.rs  data.csv  error.rs  example-participants-without-groups.csv  example-participants.csv  gift_circle.rs  gift_path.rs  group.rs  lib.rs  main.rs  mode.rs  myargs.rs  people.rs  person.rs
tests/: cli.rs
