[package]
name = "gift_circle"
version = "0.11.3"
edition = "2021"
authors = ["Chuck King"]
description = "Generate gift exchange assignments where recipients are randomly picked from other family groups."
repository = "https://github.com/cwkingjr/gift_circle"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
counter = "0.5.7"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.81"

[dev-dependencies]
