[package]
name = "gift_circle"
version = "0.11.7"
edition = "2021"
authors = ["Chuck King"]
description = "Generate gift exchange assignments where recipients are randomly picked from other family groups."
repository = "https://github.com/cwkingjr/gift_circle"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
counter = "0.6.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.36", features = ["derive"] }
anyhow = "1.0.98"

[dev-dependencies]
