[package]
name = "gift_circle"
version = "0.12.0"
edition = "2021"
authors = ["Chuck King"]
description = "Generate gift exchange assignments where recipients are randomly picked from other family groups."
repository = "https://github.com/cwkingjr/gift_circle"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
rand = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.12"
anyhow = "1.0.102"

[dev-dependencies]
proptest = "1.6"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
